[package]
name = "rustun"
version = "0.1.0"
edition = "2021"
description = "A multi-protocol security tunnel written in Rust, ported from gost"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mew-sh/rustun"
keywords = ["proxy", "tunnel", "socks5", "http-proxy", "port-forwarding"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.8"
glob-match = "0.2"
ipnet = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
http = "1"
httparse = "1"
url = "2"
pin-project-lite = "0.2"
# SSH support (russh used internally by ssh module)
# russh = "0.49" -- available but not imported directly yet
# QUIC support
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
# HTTP/2 support
h2 = "0.4"
# Shadowsocks cipher support
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha1 = "0.10"
md5 = "0.7"
bytes = "1"
rcgen = "0.13"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
vendored-openssl = ["openssl"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
